# edito-workshops-presentations

./: .Rprofile  .gitignore  CHANGELOG.md  DESCRIPTION  LICENSE  Makefile  README.md  build_docs.sh  mkdocs.yml  pyproject.toml  setup.py  test_presentation.html
.github/workflows/: docs.yml
add_data/: README.md  dataset_to_stac_item.py
add_process/: README.md
add_process/example_model/: Dockerfile  README.md  requirements.txt
add_process/example_model/Scripts/: 01_data_preparation.R  02_model_analysis.R
add_process/example_process/: values.schema.json  values.yaml
add_process/example_process/templates/: job-outputs.yaml  job.yaml  pvc.yaml
add_process/geo-to-parquet/: .helmignore  Chart.yaml  values.schema.json  values.yaml
add_process/geo-to-parquet/templates/: NOTES.txt  job.yaml  pvc.yaml
add_service/: README.md
add_service/view_parquet_service/: README.md
add_service/view_parquet_service/app/: global.R  server.R  ui.R
add_tutorial/: README.md
docs/: Makefile  index.md
docs/source/: index.md  presentations.md
docs/source/add_data/: README.md
docs/source/add_process/: README.md
docs/source/add_process/example_process/: Chart.yaml  values.schema.json  values.yaml
docs/source/add_process/example_process/templates/: NOTES.txt
docs/source/add_service/: README.md
docs/source/add_tutorial/: README.md
docs/source/explore_data/: README.md
docs/source/presentations/: Makefile  add_data_slidedeck.md  add_edito_process_slidedeck.md  add_edito_service_slidedeck.html  add_edito_service_slidedeck.md  add_edito_tutorial_slidedeck.html  add_edito_tutorial_slidedeck.md  contribution_presentation_slidedeck.md  explore_data_slidedeck.html  explore_data_slidedeck.md  mongoos_eurogoos_workshop_20251202_samfooks_contribute_slidedeck.md  using_datalab_slidedeck.html  using_datalab_slidedeck.md
docs/source/presentations/events/: mongoos_eurogoos_workshop_20251202_samfooks_contribute_slidedeck.md
docs/source/static/styles/: edito-marp.css
docs/source/using_datalab/: README.md
explore_data/: README.md
using_datalab/: 01_edito_datalab_demo.ipynb  01_edito_datalab_demo.py  01_stac_search.R  02_read_parquet.R  README.md  using_datalab_tutorial.Rmd  vscode_example.md
using_datalab/jupyter_notebooks/: 01_edito_datalab_demo.ipynb  01_edito_datalab_demo.py
using_datalab/python/: 01_get_stac_collections.py  02_search_stac_assets.py  03_get_zarr_to_df.py  04_get_parquet_data.py  05_combine_and_save.py  05_combine_and_save_simple.py  README_scripts.md  check_credentials.py  run_full_demo.py  stac_collections.json  stac_parquet_items.json  stac_search_results.json  using_storage.py
using_datalab/python_scripts/: 01_jupyter_basics.py  01_marine_data_analysis.py  02_personal_storage_python.py
using_datalab/r/: 01_stac_search.R  02_read_parquet.R  03_personal_storage.R
using_datalab/r_scripts/: 01_rstudio_basics.R  02_fish_tracking_analysis.R  02_oceanographic_analysis.R  03_personal_storage.R
