[project]
name = "edito-workshops-presentations"
version = "0.1.0"
description = "EDITO Technical Workshop Repository"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]

[tool.uv]
dev-dependencies = []